objects/RB_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Business__c</fullName>
        <label>Recurring Business</label>
        <referenceTo>Recurring_Business__c</referenceTo>
        <relationshipLabel>Recurring Business Team Members</relationshipLabel>
        <relationshipName>Recurring_Business_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Sales Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recurring_Business_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recurring Business Team Member</label>
    <nameField>
        <displayFormat>RBTM-{00000}</displayFormat>
        <label>RB Team Member Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Business Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>